test/types/typedefs/bradc/redefineTypeNames3.good
redefineTypeNames3.chpl:3: syntax error: near 'int'
